Globalizes colours and fixes spacing issue with menu

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,65 +1,65 @@
-.Navbody{
-    margin: 0;
-    min-height: 0vh;
-}
-.header{
-    display:flex;
-    background-color: #F1F1FA;
-    padding: 0 10px;
-}
-.left-header{
-    display:inline-block;
-    align-items: center;
-}
-.right-header{
-    align-items: center;
-    margin-left: 91em;
+.NavBody {
+  margin: 0;
+  min-height: 0vh;
 }
 
-.right-header:hover{
-    background-color: fuchsia;
+.header {
+  display: flex;
+  padding: 0 10px;
+  padding: 10px 20px;
+  background-color: var(--background-color);
 }
 
-.sidebar{
-    margin-top: 0;
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right :0;
-    background-color: black;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 100px;
+/* TODO: Add logo */
+.left-header {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.right-header {
+  align-items: center;
+  margin-left: auto;
+}
+
+.sidebar {
+  margin-top: 0;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: var(--side-bar-color);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 100px;
 }
 
 .sidebar a {
-    padding: 4px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 23px;
-    color: white;
-    display:block;
-    transition: 0.25s;
+  padding: 4px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 23px;
+  color: var(--font-color-three);
+  display: block;
+  transition: 0.25s;
 }
 
 .sidebar a:hover {
-    color:white;
+  color: var(--background-color);
 }
 
 .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin-left: 30px;
-  }
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-left: 30px;
+}
 
-  .sidebar .exitbtn {
-    position: absolute;
-    margin-top: 9em;
-    bottom: 1;
-    right: 0px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-
+.sidebar .exitbtn {
+  position: absolute;
+  margin-top: 9em;
+  bottom: 1;
+  right: 0px;
+  font-size: 36px;
+  margin-left: 50px;
+}
